--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,169 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+::after,
+::before {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button,
+input {
+  font: inherit;
+  text-transform: inherit;
+}
+
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+h1,
+h2 {
+  text-align: center;
+}
+
+button {
+  cursor: pointer;
+  white-space: nowrap;
+  padding: 0.25rem 1.5rem;
+  font-weight: 600;
+}
+
+/* Input Reset */
+input[type="checkbox"],
+input[type="radio"],
+input[type="date"] {
+  cursor: pointer;
+}
+
+input::-webkit-calendar-picker-indicator {
+  cursor: pointer;
+}
+
+body {
+  font-family: "Barlow Semi Condensed", sans-serif;
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.flow > * + * {
+  margin-top: 1.25rem;
+}
+
+/* Table Styling */
+table {
+  width: 100%;
+  text-align: center;
+  margin-top: 1.25rem;
+}
+
+th,
+td {
+  padding: 1rem;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+/* Form utility */
+.form {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.form > input {
+  width: 100%;
+}
+
+/* Text Utility */
+.text--center {
+  text-align: center;
+}
+
+/* Flex Utility */
+.flex {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.flex--gap-200 {
+  gap: 2rem;
+}
+
+.flex--gap-100 {
+  gap: 1rem;
+}
+
+.flex--justify-center {
+  justify-content: center;
+}
+
+.flex--justify-space {
+  justify-content: space-between;
+}
+
+.flex--align-center {
+  align-items: center;
+}
+
+.flex--center {
+  justify-content: center;
+  align-items: center;
+}
+
+/* Grid Utility */
+.grid {
+  display: grid;
+}
+
+.grid--content-center {
+  place-content: center;
+}
+
+.grid--items-center {
+  place-items: center;
+}
+
+/* Margins */
+.margin-300 {
+  margin-top: 2rem;
+}
+
+.margin-200 {
+  margin-top: 1.5rem;
+}
+
+.margin-100 {
+  margin-top: 1rem;
+}
+
+/* Width */
+.width-300 {
+  width: 64rem;
+}
+
+.width-200 {
+  width: 48rem;
+}
+
+.width-100 {
+  width: 36rem;
+}
+
+.width-100-percent {
+  width: 100%;
+}
+
+.width-50-percent {
+  width: 50%;
+}
+
+.width-25-percent {
+  width: 25%;
 }
